2010-06-23  Zoltan Bojthe

    * added some optimizations and improvements:
        - optimized PAWS check
        - optimized ASSERT condition in convertSimtimeToTS() and convertTSToSimtime()
        - integrated scaleRcvWnd() into updateRcvWnd()
        - simplified setting window size
        - replaced use of '12' by constant TCP_OPTION_TS_SIZE in sendData(), setPipe() and nextSeg()
        - added logging in isSegmentAcceptable()
        - renamed dataToSend() to isSendQueueEmpty(), optimized function body and adjusted its use in sendData()

2010-06-19  Thomas Reschka

    * implemented RFC 1323 (TCP Extensions for High Performance):
        - Window Scale option
        - Timestamps option (Round-Trip Time Measurement - RTTM)
        - Protect Against Wrapped Sequence Numbers (PAWS)
        - added a PAWS modification according to the latest proposal
          of the tcplw@cray.com list (Braden 1993/04/26)

    * implemented missing part of RFC 2581: Re-starting Idle Connections

    * added some improvements:
        - added check for TS and SACK in writeHeaderOptions() to avoide of unnecessary NOPs
        - moved condition: if (rcvWndVector) rcvWndVector->record(state->rcv_wnd); into updateRcvWnd
        - changed parts of SACK implementation to respect potential use of TS option
        - changed parts of updateWndInfo() to respect potential use of WS option
        - changed parts of the delayedAck algorithm

    * Fixed 'TCP data transfer stopped before all bytes transmitted' issue. See bug #160

    * Fixed some issues (not yet reported):
        - the node doing the passive open should use mss as cwnd! Calling receivedDataAck()
          after receiving ACK for SYN,ACK changes cwnd to 2*mss!
        - a SACK supporting node should not include a SACK_PERMITTED option in his SYN,ACK
          when the received SYN was without SACK_PERMITTED 
        - calling readHeaderOptions() was missing in certain situations (receivedOutOfOrderSegment(),